# jupyter-flex

./: .coveragerc  .envrc  .firebaserc  .gitattributes  .gitignore  .isort.cfg  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  DEV.md  DEVELOP.md  MANIFEST.in  Makefile  README.md  RELEASE.md  RELEASING.md  Taskfile.yml  conf.json  docker-compose.yml  environment.yml  firebase.json  jupyter_config.json  mkdocs.yml  netlify.toml  package-lock.json  package.json  postBuild  pyproject.toml  pytest.ini  requirements-package.txt  requirements.package.txt  requirements.txt  requirements.txt.bu  setup.cfg  setup.py
.binder/: postBuild
.circleci/: config.yml
.github/workflows/: deploy-cf-pages.yml  deploy-firebase.yml  docs-pr.yml  docs.yml  main.yml  requirements.txt  test.yml
docs/: customization.ipynb  getting-started.ipynb  index.md  layout.ipynb  layout.md  layouts.ipynb  plotting.ipynb  reference.md  voila-ipywidgets.ipynb  voila-widgets.ipynb  widgets-voila.ipynb
docs/theme/: main.html
examples/: JupyterDash.ipynb  altair-plots.ipynb  bokeh-iris.ipynb  bokeh-plots.ipynb  bqplot-plots.ipynb  bqplot.ipynb  dashex.py  data-types.ipynb  iris-clustering.ipynb  iris-plots-bokeh.ipynb  iris-plots.ipynb  movie-explorer.ipynb  movies.ipynb  nba-scoring.ipynb  plotly-plots.ipynb  simple-test.ipynb  time-series.ipynb  wealth-of-nations.ipynb
examples/customize/: classes-colors.ipynb  custom-css-nbconvert.ipynb  custom-css.ipynb  custom.css  customize.ipynb
examples/demos/: data-types.ipynb
examples/dev/: all-in-one.ipynb  images.ipynb  layouts.ipynb  markdown.ipynb  mpl-types.ipynb
examples/docs/: 1-one-plot.ipynb  2-two-plots.ipynb  3-two-columns.ipynb  4-two-rows.ipynb  one-plot.ipynb  two-columns.ipynb  two-plots.ipynb  two-rows.ipynb
examples/getting-started/: 1-one-plot.ipynb  2-two-plots.ipynb  3-two-columns.ipynb  4-two-rows.ipynb  ipywidgets.ipynb  one-card-full.ipynb  one-plot.ipynb  two-columns.ipynb  two-plots.ipynb  two-rows-title.ipynb  two-rows.ipynb
examples/illusionist/: linked.ipynb  matplotlib.ipynb  multiplier.ipynb  widget-gallery.ipynb
examples/layouts/: card-complete.ipynb  card-sections.ipynb  card.ipynb  focal-chart-top-card-size.ipynb  focal-chart-top-chart-size.ipynb  focal-chart-top.ipynb  global-sidebar.ipynb  grid-2x2.ipynb  grid-2x3.ipynb  header-columns-footer.ipynb  layout-fill.ipynb  layout-scroll.ipynb  orientation-columns-columns.ipynb  orientation-columns.ipynb  orientation-rows-rows.ipynb  orientation-rows.ipynb  pages-diff-layouts.ipynb  pages-sidebar.ipynb  pages.ipynb  section-columns-columns.ipynb  section-columns-rows.ipynb  section-columns.ipynb  section-rows-columns.ipynb  section-rows-rows.ipynb  section-rows.ipynb  section-tabs-columns.ipynb  section-tabs-rows.ipynb  sidebar-global-and-pages.ipynb  sidebar-global.ipynb  sidebar-pages.ipynb  single-card.ipynb  tablist.ipynb  tabs-section-columns.ipynb  tabs-section-rows.ipynb  tabs-section.ipynb  tabs.ipynb  test-empty-pages.ipynb  test-empty-sections.ipynb
examples/plots/: AAPL.csv  AMZN.csv  MSFT.csv  altair-fill.ipynb  altair-scroll.ipynb  altair-simple.ipynb  altair-single.ipynb  altair.ipynb  bokeh-simple.ipynb  bokeh-single.ipynb  bokeh.ipynb  bqplot-simple.ipynb  bqplot-single.ipynb  bqplot.ipynb  card-complete.ipynb  plotly-simple.ipynb  plotly-single.ipynb  plotly.ipynb  plots-mixed-content.ipynb  plots-with-content.ipynb
examples/tmp/: one-card-full.ipynb  pages.ipynb  section-tabs-rows.ipynb
examples/widgets/: all-ipywidgets.ipynb  ipyleaflet.ipynb  ipysheet.ipynb  ipywidgets-gallery.ipynb  ipywidgets-sidebar.ipynb  ipywidgets.ipynb  mpl-histogram.ipynb  qgrid.ipynb  widgets-gallery.ipynb  widgets-sidebar.ipynb
flex/nbconvert_templates/: flex-base.tpl  flex.min.css  flex.tpl  macros.j2  overwrite.min.css  temp.tpl  voila.bu.tpl  voila.tpl
flex/static/: flex-overwrite.scss  flex.min.css  flex.scss  overwrite.scss
flex/templates/: browser-open.html
js/: .babelrc  .eslintrc.js  .eslintrc.json  .gitignore  .sassrc  README.md  package-lock.json  package.json  webpack.config.js
js/src/: FlexRenderer.js  embed.js  index.html  index.js  loader.js  utils.js
jupyter_flex/: __init__.py  _version.py  exporter.py  nbconvert_exporter.py  utils.py
jupyter_flex/nbconvert_templates/: flex-base-page.tpl  flex-base.html.j2  flex-base.tpl  flex-base2.html.j2  flex-ipywidgets.html  flex.tpl  macros.j2  nbconvert.tpl  tmp.encoding.tpl  voila.tpl  (+2 more)
python/: MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-examples.txt  requirements-package.txt  requirements.txt  setup.cfg  setup.py
python/development/: hook_editable.py  patch-voila-paths.py
python/editable/: hook.py  patch-voila-paths.py
python/jupyter_flex/: __about__.py  __init__.py  app.py  config.py  exporter.py  exporter_illusionist.py  utils.py
python/jupyter_flex.tests.test_splinter/: test_browsers-browser.html
python/jupyter_flex/templates/flex/static/: .gitignore  281.jupyter-flex-embed.js  281.jupyter-flex-embed.js.map  87.jupyter-flex-embed.js  87.jupyter-flex-embed.js.map  jupyter-flex-embed.css  jupyter-flex-embed.js.LICENSE.txt
python/jupyter_flex/templates/nbconvert/flex/: flex.j2  index.html.j2
python/jupyter_flex/templates/voila/flex/: index.html.j2  page.html  tree.html
python/jupyter_flex/tests/: conftest.py  test_examples.py  test_illusionist.py  test_import.py  test_layouts.py  test_pkg.py  test_splinter.py
python/requirements/: all.txt  examples.in  examples.txt  linting.txt  pyproject-docs.txt  pyproject.txt
python/share/jupyter/nbconvert/flex/: index.html.j2
python/share/jupyter/nbconvert/templates/flex/: conf.json  flex.j2  index.html.j2  index.tpl
python/share/jupyter/voila/templates/flex/: browser-open.html  error.html  index.html.j2  page.html  tree.html
python/share/jupyter/voila/templates/flex/nbconvert_templates/: flex.j2  index.html.j2  voila.tpl
python/share/jupyter/voila/templates/flex/static/: .gitignore
python/share/jupyter/voila/templates/flex/templates/: page.html  tree.html
(+116 files in other folders)
