[metadata]
license = Apache License 2.0

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = jupyter_flex/_version.py
versionfile_build = jupyter_flex/_version.py
tag_prefix =
parentdir_prefix = jupyter_flex-

[tool:pytest]
norecursedirs =
    .git
    dist
    build
    env
    venv
python_files =
    test_*.py
doctest_plus = disabled
addopts = --strict --cov=jupyter_flex --cov-report term-missing --cov-report html
markers =
    slow

# https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length
[flake8]
max-line-length = 80
ignore = E203, E501, W503
select = C,E,F,W,B,B950
