[metadata]
license = Apache License, Version 2.0

[bdist_wheel]
universal = 1

[flake8]
# https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length
max-line-length = 80
ignore = E203, E501, W503
select = C,E,F,W,B,B950
paths = .,jupyter_flex
exclude = .git,dist,build,env,venv,*.egg*

[tool:pytest]
norecursedirs = .git,dist,build,env,venv
strict = true
addopts = jupyter_flex/tests --cov=jupyter_flex --cov-report term-missing
