
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Daniel Rodriguez"},
]
maintainers = [
    {name = "Daniel Rodriguez"},
]
license = {text = "Apache License, Version 2.0"}
requires-python = ">=3.8,<4.0"
dependencies = [
    "ipykernel>=6.4.1",
    "jinja2<4.0.0,>=3.0.1",
    "nbconvert>=6.2.0",
    "voila<0.5,>=0.2.0",
]
name = "jupyter-flex"
version = "0.8.0"
description = "Build dashboards using Jupyter Notebooks"
readme = "README.md"
classifiers = ["Development Status :: 5 - Production/Stable", "Operating System :: OS Independent", "Intended Audience :: Science/Research", "Programming Language :: Python", "Programming Language :: Python :: 3", "Topic :: Scientific/Engineering"]

[project.urls]
homepage = "https://github.com/danielfrg/jupyter-flex"
repository = "https://github.com/danielfrg/jupyter-flex"
documentation = "https://github.com/danielfrg/jupyter-flex"

[project.entry-points]
[project.entry-points.console_scripts]
jupyter-flex = "jupyter_flex.app:main"

[project.entry-points."nbconvert.exporters"]
flex = "jupyter_flex:FlexExporter"
flex-illusionist = "jupyter_flex:FlexIllusionistExporter"

[project.group]
[project.group.dev]
optional = true

[project.group.dev.dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pylint = "^2.11.1"
twine = "^3.4.2"

[project.group.test]
optional = true

[project.group.test.dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-html = "^3.1.1"
pytest-selenium = "^2.0.1"
pytest-splinter = "^3.3.1"
pytest-image-diff = "^0.0.6"

[project.group.test.dependencies.coverage]
version = "^6.1.2"
extras = ["toml"]

[project.group.docs]
optional = true

[project.group.docs.dependencies]
mkdocs = "^1.2.2"
mkdocs-material = "^7.3.6"
mkdocs-jupyter = "^0.18.1"
mkdocs-minify-plugin = "^0.4.0"
Pygments = "^2.10.0"
pymdown-extensions = "^9.0.0"

[project.group.examples]
optional = true

[project.group.examples.dependencies]
altair = ">=4.2.0"
bokeh = ">=2.4.2"
bqplot = ">=0.12.31"
colorlover = ">=0.3.0"
ipyleaflet = ">=0.15.0"
ipysheet = ">=0.5.0"
ipywidgets = ">=7.6.5"
matplotlib = ">=3.5.1"
numpy = ">=1.21.5"
pandas = ">=1.3.5"
pandas-datareader = ">=0.10.0"
plotly = ">=5.5.0"
qgrid = ">=1.3.1"
scikit-learn = ">=1.0.2"
scipy = ">=1.7.3"
vega-datasets = ">=0.9.0"
statsmodels = ">=0.13.1"

[tool.pytest.ini_options]
testpaths = ["jupyter_flex/tests"]
addopts = [
  "-s", "-vv",
  "--ignore=dist",
  "--ignore=site-packages",
  # "--strict-markers",
  "--cov=jupyter_flex",
  "--cov-report=term",
  "--cov-config=pyproject.toml",
]
xfail_strict = true
markers = [
    "pkg: marks tests as pkg (deselect with '-m \"not pkg\"')",
    "layouts: mark all layout tests",
    "examples: marks all example tests",
    "plots: mark all plotting tests",
    "apps: mark all apps tests",
    "widgets: marks all widget tests",
    "docs: mark all docs tests",
    "illusionist: marks all illusionist tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
ignore_errors = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]
omit = ["jupyter_flex/tests/*"]

[tool.coverage.paths]
source = [
    "jupyter_flex",
    ".venv/lib/python*/site-packages/jupyter_flex",
]

[tool.black]
line_length = 79
skip_string_normalization = true

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.pydocstyle]
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105"]
convention = "numpy"
inherit = false
match_dir = "jupyter_flex"

[tool.hatch.build]
include = ["jupyter_flex"]
exclude = ["jupyter_flex/editable.py"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_flex/templates"]

[tool.hatch.build.targets.wheel]
shared-data = { "share" = "share" }
hooks.custom.path = "editable/hook.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
