[project]
name = "jupyter-flex"
description = "Build dashboards using Jupyter Notebooks"
readme = "README.md"
license = "Apache-2.0"
keywords = ["jupyter", "jupyterlab", "notebooks", "voila", "dashboards"]
authors = [{ name = "Daniel Rodriguez", email = "daniel@danielfrg.com" }]
maintainers = [{ name = "Daniel Rodriguez", email = "daniel@danielfrg.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    'Intended Audience :: Developers',
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.21.3",
    "jinja2>=3.1.2",
    "MarkupSafe>=2.0.1",
    "nbconvert>=7.2.9",
    "voila>=0.4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# illusionist = ["illusionist"]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-selenium",
    "pytest-splinter",
    "pytest-image-diff",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter>=0.23.0",
    "mkdocs-minify-plugin",
    "Pygments",
    "pymdown-extensions",
]

[project.urls]
homepage = "https://github.com/danielfrg/jupyter-flex"
repository = "https://github.com/danielfrg/jupyter-flex"
documentation = "https://github.com/danielfrg/jupyter-flex"

[project.entry-points."nbconvert.exporters"]
flex = "jupyter_flex:FlexExporter"
# flex-illusionist = "jupyter_flex:FlexIllusionistExporter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["jupyter_flex"]

[tool.hatch.version]
path = "jupyter_flex/__about__.py"

[tool.hatch.envs.default]
features = ["test", "docs"]
dependencies = [
    "black",
    "flake8",
    "isort",
    "pip-tools",
    "ruff",
    # Examples
    "altair>=4.2.0",
    "bokeh>=2.4.2",
    "bqplot>=0.12.31",
    "colorlover>=0.3.0",
    "ipyleaflet>=0.15.0",
    "ipysheet>=0.5.0",
    "ipywidgets>=7.6.5",
    "matplotlib>=3.5.1",
    "numpy>=1.21.5",
    "pandas>=1.3.5",
    "pandas-datareader>=0.10.0",
    "plotly>=5.5.0",
    "scikit-learn>=1.0.2",
    "statsmodels>=0.13.1",
    "scipy>=1.7.3",
    "vega-datasets>=0.9.0",
]


[tool.hatch.build.targets.sdist]
artifacts = ["share"]
include = ["development"]

[tool.hatch.build.targets.wheel]
shared-data = { "share" = "share" }
hooks.custom.path = "development/hook_editable.py"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=adsctl --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.pytest.ini_options]
testpaths = ["jupyter_flex/tests"]
addopts = [
    "-s",
    "-vv",
    "--ignore=dist",
    "--ignore=site-packages",
    # "--strict-markers",
    "--cov=jupyter_flex",
    "--cov-report=term",
    "--cov-config=pyproject.toml",
]
xfail_strict = true
markers = [
    "pkg: marks tests as pkg (deselect with '-m \"not pkg\"')",
    "layouts: mark all layout tests",
    "examples: marks all example tests",
    "plots: mark all plotting tests",
    "apps: mark all apps tests",
    "widgets: marks all widget tests",
    "docs: mark all docs tests",
    "illusionist: marks all illusionist tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
ignore_errors = false
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise NotImplementedError",
]
omit = ["jupyter_flex/tests/*"]

[tool.coverage.paths]
source = ["jupyter_flex", ".venv/lib/python*/site-packages/jupyter_flex"]

[tool.black]
line_length = 79
skip_string_normalization = true

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.pydocstyle]
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105"]
convention = "numpy"
inherit = false
match_dir = "jupyter_flex"
name = "jupyter-flex"
description = "Build dashboards using Jupyter Notebooks"
readme = "README.md"
license = "Apache-2.0"
keywords = ["jupyter", "jupyterlab", "notebooks", "voila", "dashboards"]
authors = [{ name = "Daniel Rodriguez", email = "daniel@danielfrg.com" }]
maintainers = [{ name = "Daniel Rodriguez", email = "daniel@danielfrg.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    'Intended Audience :: Developers',
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
